Decouple repository delivery from connections
